# symShell2andRTM

./: .PROJECT.WLOG.INFO  .gitignore  .gitmodules  README.md  _check.sh
EXAMPLES_CLASSES/: README.md
RTM/: CMakeLists.txt
RTM/INCLUDE/: TabDelimited.hpp  _groups.h  _obsolete.h  _voidnew.hpp  arr_base.hpp  arrays.hpp  arrays.imp  assobase.hpp  assoctab.IMP  assoctab.hpp  bounded.hpp  compatyb.h  compatyb.hpp  errorhan.hpp  excpbase.hpp  excpmem.hpp  excpothr.hpp  iocharp.hpp  ioexcep.hpp  iosuppor.hpp  lingo.hpp  optParam.hpp  platform.hpp~  random.h  typenames.hpp  use_math_defines.h  var_contr.hpp  viewHtml.hpp  virtualConstructor.h  vobject.hpp  wb_bits.h  wb_clone.hpp  wb_cpucl.hpp  wb_limits.h  wb_limits.hpp  wb_pchario.hpp  wb_ptr.hpp  wb_ptrio.h  wb_rand.hpp  wb_smartlog.hpp  (+1 more)
RTM/INCLUDE/outdated/: platform.h  platform.hpp
RTM/src/BASE/: error_enter_before_clean.c  errorhan.cpp  viewHtmlPchar.cpp  viewHtmlStr.cpp  virtualConstructor.cpp  wb_rand.cpp  wb_randg.c
RTM/src/COMPATIBILITY/: stricmp.c  struprstrlwr.c
RTM/src/EXCEPT/: boundexc.cpp  excpprin.cpp  extextex.cpp  ioexcep.cpp
RTM/src/PTRS/: wb_pchar.cpp  wb_pchar_verboten.cpp  wb_pchario.cpp
RTM/src/TOOLS/SMARTLOG/: smartlog.cpp
RTM/src/TOOLS/TABDELIMITED/: TabDelimited.cpp
RTM/src/VIRTUALIO/: iocharp.cpp  iodatabase.cpp  iosuppor.cpp  vobject.cpp
SYMSHELL_CLASES/: CMakeLists.txt
SYMSHELL_CLASES/DATACLSS/: _ikeycon.hpp  arrasour.hpp  bifilter.hpp  bifiltso.hpp  cincsou.hpp  clstsour.hpp  coincsou.hpp  containe.hpp  corrsour.hpp  costatso.hpp  datasour.hpp  dhistosou.hpp  fifosour.hpp  filtsour.hpp  funcsour.hpp  histosou.hpp  logfile.hpp  mattsour.hpp  multfils.hpp  ohistosou.hpp  scalsour.hpp  simpsour.hpp  sourbase.hpp  sourmngr.hpp  spatcors.hpp  statsour.hpp  titleuti.hpp
SYMSHELL_CLASES/SIMULCLSS/: geombase.hpp  layer.hpp  linegeom.hpp  rectgeom.hpp  world.hpp
SYMSHELL_CLASES/VISUALCLSS/: amngrcmd.h  areamngr.hpp  drawable.hpp  gadgets.hpp  graphs.hpp  mainmngr.hpp  textarea.hpp
SYMSHELL_CLASES/src/data/: _ikeycon.cpp  datalog.cpp  sourbase.cpp  sourmngr.cpp
SYMSHELL_CLASES/src/simul/: alayeristr.cpp  aleyerostr.cpp  geombase.cpp  layer.cpp  layer_gd.cpp  world.cpp  world_io.cpp  worldimpi.cpp  worldimpo.cpp  worldistr.cpp  worldostr.cpp  worldstrm.cpp
SYMSHELL_CLASES/src/visual/: areamngr.cpp  gadgets.cpp  graphs.cpp  mainmngr.cpp  points_plot.cpp  rgb_graphs.cpp
SYMSHELL_CLASES/src/visual/__history/: _fastcarp.c--
docs/: Doxyfile  logfile.txt
docs/links/: INCLUDE  src
